# dswm

./: Cargo.toml  README.md  logging_config.yaml
src/: client.rs  config.rs  layout.rs  main.rs  monitor.rs  xmanager.rs
